# serverless-graphql-testbed

./: README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
testbed/: testbed.py
